# ROBOTIS-OP3

op3_direct_walking_module/: CMakeLists.txt  package.xml
op3_direct_walking_module/include/op3_direct_walking_module/: frames.h  kinsolver.h  op3_direct_walking.h
op3_direct_walking_module/src/: frames.cpp  kinsolver.cpp  main.cpp  op3_direct_walking.cpp  op3_direct_walking.h  op3_zmp_walk.cpp  op3_zmp_walk.h  test  trajectorygenerator.cpp  trajectorygenerator.h
op3_keyboard_control/src/: main.cpp
op3_manager/: CMakeLists.txt  package.xml
op3_manager/config/: OP3.robot
op3_manager/src/: op3_manager.cpp
op3_quasistatic_locomotion/: package.xml
op3_quasistatic_locomotion/src/: main.cpp  op3_quasistatic_locomotion.cpp  op3_quasistatic_locomotion.h  run_quasistatic.cpp
op3_quasistatic_module/: CMakeLists.txt  package.xml
op3_quasistatic_module/include/: op3_quasistatic_module.h
op3_quasistatic_module/src/: op3_quasistatic_module (another copy).cpp  op3_quasistatic_module (copy).cpp  op3_quasistatic_module.cpp
open_cr_module/include/open_cr_module/: open_cr_module.h
open_cr_module/src/: open_cr_module.cpp
