<?xml version="1.0"?>
<package format="2">
  <name>op3_quasistatic_locomotion</name>
  <version>0.0.0</version>
  <description>The op3_quasistatic_locomotion package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="gera@todo.todo">gera</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>op3_balance_control</depend>
  <depend>op3_online_walking_module_msgs</depend>
  <depend>orocos_kdl</depend>
  <depend>robotis_controller_msgs</depend>
  <depend>robotis_device</depend>
  <depend>robotis_framework_common</depend>
  <depend>robotis_math</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
